# Interoperability-PHR-protocol

api/: .env  modules.js  package-lock.json  package.json  server.js  utils.js
api/controller/: other.js  program.js
api/idl/: phr_core.json
api/routes/: api.authority.js  api.dashboard.js  api.document.js  api.login.js  api.profile.js
api/utils/: data.js  db.js  instructions.js  solanaHelper.js  solanaProgram.js
client/: .env  package-lock.json  package.json
client/src/: App.js  index.js
client/src/components/createPHR/: CreatePHRComponent.jsx  styles.css
client/src/components/dashboard/: ActiveRequestComponent.jsx  DashboardOtherComponent.jsx  GrantRequestComponent.jsx  GrantedRequestComponent.jsx  UserDashComponent.jsx  UserRecords.jsx  styles.css
client/src/components/header/: HeaderComponent.jsx  styles.css
client/src/components/login/: LoginComponent.jsx  LoginOtherComponent.jsx  OtpInput.jsx  styles.css
phr_core/: Anchor.toml
phr_core/programs/phr_core/: Cargo.toml
phr_core/programs/phr_core/src/: constants.rs  events.rs  lib.rs
phr_core/programs/phr_core/src/instructions/: authority.rs  document.rs  mod.rs  profile.rs
phr_core/programs/phr_core/src/state/: authority.rs  document.rs  profile.rs
phr_core/tests/: phr_core.ts
