[package]
name = "phr_core"
version = "0.1.0"
description = "Interoperability PHR Protocol Core"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "phr_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
